projeto ecommerce - index Rev.2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <title>site ecommerce | fernandez</title>
 </head>
 <body>
@@ -19,12 +19,16 @@
 
             </button>
             <ul id="menu" role="menu">
-                <li><a class="linkMenu" href=""></a></li>
+                <li><a class="linkMenu" href="index.html">home</a></li>
+                <li><a class="linkMenu" href="jogos.html">jogos</a></li>
+                <li><a class="linkMenu" href="produtos.html">produtos</a></li>
+                <li><a class="linkMenu" href="contato.html">contato</a></li>
 
             </ul>
 
         </nav>
     </header>
+    <!--fim do menu responsivo-->
     
 </body>
 </html>
