--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--aula 27/09/2022-->
     <!--inicio do menu responsivo-->
     <header id="header">
-        <a id="logo" href="index.html"><img src="./img/senai_small.jpg" alt="logo gamer-PRO"></a>
+        <a id="logo" href="index.html"><img src="./img/e-commerce-logo-B0AE7EE720-seeklogo.com.png" alt="logo ecommerce"></a>
         <nav id="nav">
             <button aria-label="abrir menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                 <span id="hamburguer"></span>
@@ -29,6 +29,34 @@
         </nav>
     </header>
     <!--fim do menu responsivo-->
+
+    <!--inicio do carouseul-->
+
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="500">
+                <img class="d-block w-100" src="./img/youtube.png" alt="">
+
+            </div>
+            <div class="carousel-item ">
+                <img class="d-block w-100" src="./img/rocket_contact.png" alt="">
+
+            </div>
+
+            <button class="carousel-control-prev" data-bs-target="#carouselExampleInterval" type="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">anterior</span>
+            </button>
+            <button class="carousel-control-next" data-bs-target="#carouselExampleInterval" type="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visualy-hidden">proximo</span>
+            </button>
+
+        </div>
+        <!--fim do carousel-->
+
+
     
 </body>
+<script type="text/css " src="./bootstrap/js/bootstrap.min.js"></script>
 </html>
