projeto ecommerce rev.05

--- a/index.html
+++ b/index.html
@@ -100,12 +100,51 @@
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <!--inicio da tag section com texto de destaque-->
-                <section>
-                    
+                <section class="col-12">
+                    <h2>que tal conheçer nossos produtos em destaque</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias voluptas eos autem quisquam aut, fugit architecto suscipit beatae eaque sunt, alias esse? Culpa ad quasi labore praesentium ipsam obcaecati dolores.</p>
                 </section>
+                <!--fim da tag section-->
+                <!--inicio img 1-->
+                <div class="col-6 col-md-2 pr-0">
+                    <figure>
+                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>jogo <br>ano</figcaption>
+                    </figure>
+                </div>
+                <div class="col-6 col-md-2 pr-0">
+                    <figure>
+                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>jogo <br>ano</figcaption>
+                    </figure>
+                </div>
+                <div class="col-6 col-md-2 pr-0">
+                    <figure>
+                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>jogo <br>ano</figcaption>
+                    </figure>
+                </div>
+                <div class="col-6 col-md-2 pr-0">
+                    <figure>
+                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>jogo <br>ano</figcaption>
+                    </figure>
+                </div>
+                <div class="col-6 col-md-2 pr-0">
+                    <figure>
+                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>jogo <br>ano</figcaption>
+                    </figure>
+                </div>
+
+                <!--inicio saiba mais-->
+                <div class="col-12">
+                    <a href="#">saiba mais</a>
+
+                </div>
+                <!--fim saiba mais-->
             </div>
         </div>
-
     </div>
 
 
@@ -113,5 +152,6 @@
 </body>
 
     <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+    
 
 </html>
