--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <title>.:: site ecommerce| ecommerce::.</title>
+    <link rel="shortcut icon" href="img/ico/57589.png" type="image/x-icon">
+    <title>site ecommerce| ecommerce</title>
 </head>
 <body>
     <!-- Aula 27/09/2022 -->
@@ -73,25 +74,20 @@
     <div class="section-banner-home">
         <div class="container-fluid">
             <div class="row m-0">
-            <div class="col-12 col-md-6">
-                <figure>
-                    <img src="img/Ecommerce-Banner-1920.jpg" class="img-fluid" alt="banner-home">
-                </figure>
+                <div class="col-12 col-md-6">
+                    <figure>
+                        <img src="img/Ecommerce-Banner-1920.jpg" class="img-fluid" alt="banner-home">
+                    </figure>
+                </div>
+                <div class="col-12 col-md-6">
+                    <section class="texto-banner d-none d-md-block">
+                        <h1>venha conheçer nosso diferencial</h1>
+                        <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quae eaque nam ipsa dolorum, ad expedita accusantium minima harum! Eaque temporibus enim repudiandae quas veritatis mollitia molestias nemo nihil quos.</p>
+                        <a href="ecommerce.html">saiba mais...</a>
+                    </section>
+                </div>
             </div>
-            <div class="col-12 col-md-6">
-                <section class="texto-banner d-none d-md-block">
-                    <h1>venha conheçer nosso diferencial</h1>
-                    <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quae eaque nam ipsa dolorum, ad expedita accusantium minima harum! Eaque temporibus enim repudiandae quas veritatis mollitia molestias nemo nihil quos.</p>
-                    <a href="ecommerce.html">saiba mais...</a>
-
-
-                </section>
-            </div>
-
-            </div>
-
         </div>
-
     </div>
     <!--fim banner-->
     <!--inicio area destaque-->
@@ -108,32 +104,32 @@
                 <!--inicio img 1-->
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
-                        <figcaption>jogo <br>ano</figcaption>
+                        <a href="jogos.html"><img src="./img/imagens destaque/73fd23cb32c3caf248e44ee55cb3eaae.webp" alt="galeria " width="100%"></a>
+                        <figcaption>caixa de som <br>jbl</figcaption>
                     </figure>
                 </div>
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
-                        <figcaption>jogo <br>ano</figcaption>
+                        <a href="jogos.html"><img src="./img/imagens destaque/images.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>camisa <br>holister</figcaption>
                     </figure>
                 </div>
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
-                        <figcaption>jogo <br>ano</figcaption>
+                        <a href="jogos.html"><img src="./img/imagens destaque/download.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>celular<br>iphone 12</figcaption>
                     </figure>
                 </div>
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
-                        <figcaption>jogo <br>ano</figcaption>
+                        <a href="jogos.html"><img src="./img/imagens destaque/585d2317c94a3ac1454ea20b65dc4d90.jpg" alt="galeria " width="100%"></a>
+                        <figcaption>camiseta<br>lacoste</figcaption>
                     </figure>
                 </div>
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="jogos.html"><img src="./img/painel-super-mario-bros.jpg" alt="galeria " width="100%"></a>
-                        <figcaption>jogo <br>ano</figcaption>
+                        <a href="jogos.html"><img src="./img/imagens destaque/Apple-iPhone-11-PNG-Pic.png" alt="galeria " width="100%"></a>
+                        <figcaption>smartphone<br>iphone 11</figcaption>
                     </figure>
                 </div>
 
@@ -146,6 +142,109 @@
             </div>
         </div>
     </div>
+
+    <!--inicio novidades-->
+
+    <div class="novidades">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <section class="text-body">
+                        <h2>que tal conhecer nossas novidades</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro iure ea commodi doloribus exercitationem magni impedit ex, voluptatibus in autem iste debitis perferendis officiis minus explicabo reiciendis accusantium vero recusandae.</p>
+                        <a class="btn-banner" href="#" target="_blank">saiba mais</a>
+
+                    </section>
+                </div>
+                <!--fim texto novidades-->
+                <!--inicio img novidades-->
+
+                <div class="col-md-6">
+                    <figure>
+                        <img class="img-fluid" src="./img/imagens destaque/partybox-100.jpg" alt="banner-home">
+                    </figure>
+                </div>
+                <!--fim img novidades-->
+            </div>
+        </div>
+    </div>
+    <!--inicio galeria-->
+
+    <div class="galeria d-flex align-items-center">
+        <div class="container">            
+            <div class="row">
+                <!--inicio texto galeria-->
+                <div class="col-12">
+                    <section class="texto-galeria">
+                        <h2>conheça nossa galeria</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro itaque rerum placeat rem vero odit eum debitis optio iusto quo veritatis, doloremque accusantium repudiandae provident facere reprehenderit laborum. Illum, velit.</p>
+                    </section>
+                </div>
+                
+                <!--fim texto galerias-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 1 da galeria-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 1 da galeria-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 1 da galeria-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 1 da galeria-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 1 da galeria-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 1 da galeria-->
+                <!--inicio img 1  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img  da galeria-->
+                <!--inicio img 8  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 8da galeria-->
+                <!--inicio img 9  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 9 da galeria-->
+                <!--inicio img 10  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 10 da galeria-->
+                <!--inicio img 11  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 11 da galeria-->
+                <!--inicio img 12  galerias-->
+                <div class="gallery col-6 col-md-3">
+                    <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
+                </div>
+                <!--fim img 12 da galeria-->
+            </div>
+        </div>
+    </div>   
 
 
 
