projeto ecommerce rev.07

--- a/index.html
+++ b/index.html
@@ -242,9 +242,62 @@
                     <img src="./img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
                 </div>
                 <!--fim img 12 da galeria-->
+
+      
+    
+    <!--inicio footer-->
+
+    <footer class="rodape">
+        <div class="container">
+            <div class="row m-0">
+                <!--inicio logomarca-->
+                <div class="col-md-4">
+                    <figure>
+                        <img src="./img/senai_small.jpg" alt="logo-rodape" width="40%">
+                    </figure>
+                </div>
+                <!--fim logomarca-->
+                <!--inicio do texto-->
+                <div class="col-md-4">
+                    <div class="info-contato">
+                        <p>email:</p>
+                       <p><a href="mailto:example@corp.net"></a></p>
+                       <p>endereço</p>
+                       <p>avenida do prado ,123</p>
+                       <p>telefone:</p>
+                       <p>+55 (11) 98888-1234</p>
+                    </div>
+                </div>
+                <!--fim do texto-->
+                <!--inicio das midias sociais-->
+                <div class="col-md-4">
+                    <figure class="redes-sociais">
+                        <a href="https://facebook.com"><img src="./img/face.png"></a>
+                        <a href="https://instagram.com"><img src="./img/insta.png"></a>
+                        <a href="https://youtube.com"><img src="./img/youtube.png"></a>
+                        <a href="https://linkedin.com"><img src="./img/linkedin.png"></a>
+
+                    </figure>
+                    <br>
+                    <!--repetir opções do menu-->
+                    <a href="index.html">home</a><br>
+                    <a href="#">jogos</a><br>
+                    <a href="#">produtos</a><br>
+                    <a href="#">contato</a><br>
+                </div>
+                <!--fim das midias sociais-->
+                <div class="col-12">
+                    <p class="direitos">direitos autorais</p>
+
+                </div>
+                <!--fim direitos autorais-->
             </div>
         </div>
-    </div>   
+    </footer>
+    <!--fim texto galeria-->
+     </div>
+  </div>
+</div>
 
 
 
