projeto ecommerce rev.09

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <span id="hamburger"></span>
             </button>
             <ul id="menu" role="menu">
-                <li><a class="linkMenu" href="index.html">Home |</a></li>
-                <li><a class="linkMenu" href="jogos.html">Jogos |</a></li>
-                <li><a class="linkMenu" href="produtos.html">Produtos |</a></li>
-                <li><a class="linkMenu" href="contato.html">Contato |</a></li>
+                <li><a class="linkMenu" href="index.html">Home </a></li>
+                <li><a class="linkMenu" href="jogos.html">Jogos </a></li>
+                <li><a class="linkMenu" href="produtos.html">Produtos </a></li>
+                <li><a class="linkMenu" href="contato.html">Contato </a></li>
             </ul>
         </nav>
     </header>
@@ -260,7 +260,7 @@
                 <!--inicio do texto-->
                 <div class="col-md-4">
                     <div class="info-contato">
-                        <p>email:</p>
+                        <p>email:ferrifabricio4@gmail.com</p>
                        <p><a href="mailto:example@corp.net"></a></p>
                        <p>endereço</p>
                        <p>avenida do prado ,123</p>
@@ -304,6 +304,7 @@
 </body>
 
     <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./js/script_menu.js"></script>
     
 
 </html>
