--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             </button>
             <ul id="menu" role="menu">
                 <li><a class="linkMenu" href="index.html">Home </a></li>
+                <li><a class="linkMenu" href="index.html">steaming </a></li>
                 <li><a class="linkMenu" href="jogos.html">Jogos </a></li>
                 <li><a class="linkMenu" href="produtos.html">Produtos </a></li>
                 <li><a class="linkMenu" href="contato.html">Contato </a></li>
+
             </ul>
         </nav>
     </header>
