projeto ecommerce rev.15

--- a/media.html
+++ b/media.html
@@ -23,6 +23,8 @@
                 <li><a class="linkMenu" href="jogos.html">Jogos </a></li>
                 <li><a class="linkMenu" href="produtos.html">Produtos </a></li>
                 <li><a class="linkMenu" href="contato.html">Contato </a></li>
+                <li><a class="linkMenu" href="streaming.html">streaming</a></li>
+                
             </ul>
         </nav>
     </header>
